@@ -357,7 +357,7 @@
                             <cargo.rmi.port>8805</cargo.rmi.port>
                             
 <!--                            <cargo.jvmargs>-Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n</cargo.jvmargs>-->
-                            <cargo.jvmargs>-noverify ${javaagent}</cargo.jvmargs>
+                            <cargo.jvmargs>-noverify ${javaagent} -Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m</cargo.jvmargs>
                         </properties>
                         <configfiles>
                             <configfile>
